--- a/.github/workflows/GCP-Deploy.yml
+++ b/.github/workflows/GCP-Deploy.yml
@@ -2,7 +2,8 @@ name: cloudrun-deploy
 on:
   push:
     branches:
-      - Flask-sample # rename this to your prod branch if the naming differs
+      - Flask-Sample # rename this to your prod branch if the naming differs
+      - Flask-Sample-PyTest-sample
 jobs:
 
     deploy:
@@ -10,16 +11,18 @@ jobs:
         runs-on: ubuntu-latest
         defaults:
           run:
-            working-directory: sample-app # change this to the directory your web app is in
+            working-directory: sample_app # change this to the directory your web app is in
         env:
           IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}
         steps:
         - name: Checkout repository
           uses: actions/checkout@v2
+        - name: Run test with pytest
+          run: pip install -r requirements.txt && pytest
         - id: 'auth'
           uses: 'google-github-actions/auth@v0'
           with:
-            credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+            credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
         - name: Configure Docker
           run: gcloud auth configure-docker --quiet
