--- a/.github/workflows/GCP-Deploy.yml
+++ b/.github/workflows/GCP-Deploy.yml
@@ -2,7 +2,8 @@ name: cloudrun-deploy
 on:
   push:
     branches:
-      - main # rename this to your prod branch if the naming differs
+      - prod # rename this to your prod branch if the naming differs
+      - Flask-Sample
 jobs:
 
     deploy:
@@ -10,7 +11,7 @@ jobs:
         runs-on: ubuntu-latest
         defaults:
           run:
-            working-directory: workflows # change this to the directory your web app is in
+            working-directory: sample_app # change this to the directory your web app is in
         env:
           IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}
         steps:
