python test cases

--- a/.github/workflows/GCP-Deploy.yml
+++ b/.github/workflows/GCP-Deploy.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - Flask-Sample # rename this to your prod branch if the naming differs
       - flask-sample-pytests
+      - flask-calc
 jobs:
 
     deploy:
