--- a/requirements.txt
+++ b/requirements.txt
@@ -69,6 +69,8 @@ fastcache @ file:///C:/ci/fastcache_1607571310570/work
 filelock @ file:///tmp/build/80754af9/filelock_1635402558181/work
 flake8 @ file:///tmp/build/80754af9/flake8_1620776156532/work
 Flask @ file:///home/ktietz/src/ci/flask_1611932660458/work
+Flask-Login==0.5.0
+Flask-SQLAlchemy==2.5.1
 fonttools==4.25.0
 fsspec @ file:///tmp/build/80754af9/fsspec_1636116461911/work
 future @ file:///C:/ci/future_1607568713721/work
