--- a/.github/workflows/GCP-Deploy.yml
+++ b/.github/workflows/GCP-Deploy.yml
@@ -20,7 +20,7 @@ jobs:
         steps:
         - name: Checkout repository
           uses: actions/checkout@v2
-        - name: Run test with pytest
+        - name: Run tests with pytest
           run: pip install -r requirements.txt && pytest
         - id: 'auth'
           uses: 'google-github-actions/auth@v0'
@@ -41,4 +41,6 @@ jobs:
 
         # requires Google Cloud Run API enabled
         - name: Deploy Docker image
-          run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image $IMAGE_NAME --region us-central1 --platform managed
+          run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image $IMAGE_NAME --region us-central1 --platform managed --set-env-vars "DB_URL=${{secrets.DB_URL}}"
+        # we can pass our github secrets as environment variables during deploy
+        #(note: this isn't the most secure way of doing this, but it's sufficient for our app)
