--- a/.github/workflows/GCP-Deploy.yml
+++ b/.github/workflows/GCP-Deploy.yml
@@ -3,7 +3,8 @@ on:
   push:
     branches:
       - Flask-Sample # rename this to your prod branch if the naming differs
-      - Flask-login-reg
+      - flask-login-reg
+      - flask-login-video
 jobs:
 
     deploy:
