--- a/.github/workflows/GCP-Deploy.yml
+++ b/.github/workflows/GCP-Deploy.yml
@@ -7,6 +7,7 @@ on:
       - flask-login-video
       - flask-calc-history
       - flask-auth-profile
+      - flask-userroles
 jobs:
 
     deploy:
