--- a/.github/workflows/GCP-Deploy.yml
+++ b/.github/workflows/GCP-Deploy.yml
@@ -10,7 +10,7 @@ jobs:
         runs-on: ubuntu-latest
         defaults:
           run:
-            working-directory: Project # change this to the directory your web app is in
+            working-directory: milestone1 # change this to the directory your web app is in
         env:
           IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}
         steps:
