--- a/.github/workflows/GCP-Deploy.yml
+++ b/.github/workflows/GCP-Deploy.yml
@@ -2,12 +2,8 @@ name: cloudrun-deploy
 on:
   push:
     branches:
-      - Flask-Sample # rename this to your prod branch if the naming differs
-      - flask-sample-pytests
-      - flask-calc
-      - flask-calc-ab
-      - flask-login-reg
-      - flask-login-video
+      -MP3-Flask-AdvCalc
+      -milestone1
 jobs:
 
     deploy:
@@ -42,6 +38,6 @@ jobs:
 
         # requires Google Cloud Run API enabled
         - name: Deploy Docker image
-          run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image $IMAGE_NAME --region us-central1 --platform managed --set-env-vars "DB_URL=${{secrets.DB_URL}}"
+          run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image $IMAGE_NAME --region us-central1 --platform managed --set-env-vars "DB_URL=${{secrets.DB_URL}},SECRET_KEY=${{secrets.SECRET_KEY}}"
         # we can pass our github secrets as environment variables during deploy
         #(note: this isn't the most secure way of doing this, but it's sufficient for our app)
