--- a/.github/workflows/GCP-Deploy.yml
+++ b/.github/workflows/GCP-Deploy.yml
@@ -18,7 +18,7 @@ jobs:
         - name: Checkout repository
           uses: actions/checkout@v2
         - name: Run tests with pytest
-          run: pip install -r requirements.txt && pytest
+          run: pip install -r requirements.txt
         - id: 'auth'
           uses: 'google-github-actions/auth@v0'
           with:
