--- a/.github/workflows/GCP-Deploy.yml
+++ b/.github/workflows/GCP-Deploy.yml
@@ -2,8 +2,7 @@ name: cloudrun-deploy
 on:
   push:
     branches:
-      -mp3-flaskadvcalc
-      -milestone1
+      - mp3-flaskadvcalc
 jobs:
 
     deploy:
@@ -18,7 +17,7 @@ jobs:
         - name: Checkout repository
           uses: actions/checkout@v2
         - name: Run tests with pytest
-          run: pip install -r requirements.txt
+          run: pip install -r requirements.txt && pytest
         - id: 'auth'
           uses: 'google-github-actions/auth@v0'
           with:
@@ -38,6 +37,6 @@ jobs:
 
         # requires Google Cloud Run API enabled
         - name: Deploy Docker image
-          run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image $IMAGE_NAME --region us-central1 --platform managed --set-env-vars "DB_URL=${{secrets.DB_URL}},SECRET_KEY=${{secrets.SECRET_KEY}}"
+          run: gcloud run deploy ${{ secrets.GCP_PROJECT_ID }} --image $IMAGE_NAME --region us-central1 --platform managed --set-env-vars "DB_URL=${{secrets.DB_URL}}"
         # we can pass our github secrets as environment variables during deploy
         #(note: this isn't the most secure way of doing this, but it's sufficient for our app)
